mastodon-stack/04-deployment-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mastodon-web
  namespace: mastodon
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: mastodon
      tier: web
  template:
    metadata:
      labels:
        app: mastodon
        tier: web
    spec:
      containers:
        - name: web
          image: ghcr.io/mastodon/mastodon
          command: ["bundle", "exec", "puma", "-C", "config/puma.rb"]
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 1Gi
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 15
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 60
            periodSeconds: 30
            failureThreshold: 3
          securityContext:
            allowPrivilegeEscalation: false
          ports:
            - containerPort: 3000
          volumeMounts:
            - mountPath: /mastodon/public/system
              name: mastodon-storage
      volumes:
        - name: mastodon-storage
          persistentVolumeClaim:
            claimName: mastodon-pvc
