mastodon-stack/06-deployment-sidekiq.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mastodon-sidekiq
  namespace: mastodon
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mastodon
      tier: sidekiq
  template:
    metadata:
      labels:
        app: mastodon
        tier: sidekiq
    spec:
      containers:
        - name: sidekiq
          image: ghcr.io/mastodon/mastodon
          command: ["bundle", "exec", "sidekiq"]
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 1Gi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
