mastodon-stack/08-service-streaming.yaml
apiVersion: v1
kind: Service
metadata:
  name: mastodon-streaming
  namespace: mastodon
spec:
  selector:
    app: mastodon
    tier: streaming
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4000
