mastodon-stack/09-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: mastodon
spec:
  ports:
    - port: 5432
  selector:
    app: postgres

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: mastodon
spec:
  selector:
    matchLabels:
      app: postgres
  serviceName: "postgres"
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
            - name: postgres-password
              mountPath: /run/secrets/postgres
              readOnly: true
      volumes:
        - name: postgres-password
          secret:
            secretName: mastodon-secrets
            defaultMode: 0400
            items:
              - key: db-password
                path: password
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 5Gi
