mastodon-stack/12-ingress-web.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mastodon-web
  namespace: mastodon
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - mastodon.whitematter.tech
    - mastodon.internal.whitematter.tech
    secretName: mastodon-tls
  rules:
  - host: mastodon.whitematter.tech
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mastodon-web
            port:
              number: 80
  - host: mastodon.internal.whitematter.tech
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mastodon-web
            port:
              number: 80
